--- a/package.json
+++ b/package.json
@@ -10,24 +10,43 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "lucide-react": "^0.438.0",
     "react": "^18.2.0",
+    "react-datepicker": "^7.3.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
+    "react-select": "^5.8.0",
+    "react-time-picker": "^7.0.0",
+    "react-type-animation": "^3.2.0",
     "redux-persist": "^6.0.0",
     "sweetalert2": "^11.10.7",
-    "sweetalert2-react-content": "^5.0.7"
+    "sweetalert2-react-content": "^5.0.7",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/node": "^22.5.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "postcss": "^8.4.44",
+    "tailwindcss": "^3.4.10",
     "vite": "^5.2.0"
   }
 }
